///////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @file      ProductSTS.proto
///
/// @brief     Data types used by the Product STS controller
///
/// @author    Yishai Sered
///
/// @attention Copyright 2018 Bose Corporation
///
///////////////////////////////////////////////////////////////////////////////////////////////////

import "ProtoToMarkup/MarkupOptions.proto";

package ProductSTS;

///////////////////////////////////////////////////////////////////////////////////////////////////
///
/// This is the identifier used to uniquely designate a product source slot for STS, as well as a
/// source and source account name for Castle content items, based on the associated enumeration
/// string.
///
///////////////////////////////////////////////////////////////////////////////////////////////////
enum ProductSourceSlot
{
    PRODUCT = 0;
    SETUP   = 1;
    TV      = 2;
    ADAPTIQ = 3;
    PAIRING = 4;
    SLOT_0  = 5;
    SLOT_1  = 6;
    SLOT_2  = 7;
}

////////////////////////////////////////////////////////////////////////////////////////////////////
///                                        End of File                                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
